# SciHPC

./: CMakeLists.txt  Data.cpp  Data.h  benchmarks2D_vortex_deformation.cpp  benchmarks_1d_IBE.cpp  benchmarks_1d_wave.cpp  benchmarks_2d_RayleighTaylorInstability.cpp  benchmarks_2d_bubble_rising.cpp  benchmarks_2d_cavity_flows.cpp  benchmarks_2d_dambreak.cpp  benchmarks_2d_multigrid_Poisson.cpp  benchmarks_2d_multigrid_Poisson_Dirichlet.cpp  benchmarks_2d_multigrid_Poisson_Neumann.cpp  benchmarks_2d_multigrid_poisson.cpp  benchmarks_2d_vortex.cpp  benchmarks_2d_zalesak.cpp  benchmarks_3d_dambreak.cpp  benchmarks_3d_multigrid_Poisson.cpp  benchmarks_3d_multigrid_Poisson_Dirichlet.cpp  benchmarks_RayleighTaylorInstability.cpp  benchmarks_convergence.cpp  benchmarks_dambreak.cpp  benchmarks_inviscid_Burger's_equation.cpp  benchmarks_lid_driven_cavity.cpp  benchmarks_lsf_curvature.cpp  benchmarks_lsf_curvature_2d.cpp  benchmarks_lsf_curvature_3d.cpp  benchmarks_lsf_initialization.cpp  boundary_condition.cpp  data_array.cpp  data_array.h  global.cpp  global.h  main.cpp  makefile  runge_kutta.cpp  scalar_data.cpp  structured_grid.cpp  tdma_test.cpp  test_twin_solver.cpp  (+1 more)
scihpc/: SharedSolvers.cpp  SharedSolvers.h  SparseMatrix.cpp  SparseMatrix.h  SparseMatrixExceptions.h  bc_factory.cpp  bc_factory.h  boundary_condition.cpp  boundary_condition.h  ccd.cpp  ccd.h  ccd_base.cpp  ccd_base.h  ccd_solver.cpp  ccd_solver.h  derivatives_solver.cpp  derivatives_solver.h  dirichlet.cpp  dirichlet.h  dummy_data.cpp  dummy_data.h  exceptions.h  flux.cpp  flux.h  global.cpp  global.h  godunov_gradient.cpp  godunov_gradient.h  lsm.cpp  lsm.h  matrix_solver.cpp  matrix_solver.h  multigrid.cpp  multigrid.h  multigrid_base.cpp  multigrid_base.h  neumann.cpp  neumann.h  no_slip.cpp  no_slip.h  (+36 more)
scihpc/Eigen/src/Core/: ConditionEstimator.h
scihpc/Eigen/src/Eigenvalues/: GeneralizedEigenSolver.h  RealQZ.h
scihpc/Eigen/src/IterativeLinearSolvers/: BiCGSTAB.h  ConjugateGradient.h  IncompleteCholesky.h  LeastSquareConjugateGradient.h
scihpc/Eigen/src/LU/: FullPivLU.h  PartialPivLU.h
scihpc/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h
scihpc/Eigen/src/SPQRSupport/: SuiteSparseQRSupport.h
scihpc/Eigen/src/SparseCore/: SparseSolverBase.h
scihpc/Eigen/src/SparseLU/: SparseLU.h  SparseLU_SupernodalMatrix.h  SparseLU_column_bmod.h  SparseLU_kernel_bmod.h  SparseLU_panel_bmod.h
scihpc/Eigen/src/SparseQR/: SparseQR.h
